$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.10-6 (Oct 18, working...)

	* Gavin Simpson joined the vegan team.

	* oecosimu: new functions for indices of nestedness of patches or
	islands, and simulation of null communities.

Version 1.10-5 (closed Oct 18, 2007 at Rev. 86)

	* biplot.rda: new biplot function for PCA in rda() (Gavin
	Simpson). 

	* scores: cca method accepts now display = c("species", "sites"),
	when it only used to accept c("sp","wa"). More consistent
	arguments in the default method.  
	
	* CCorA: Pierre Legendre submitted code for permutation test of
	Pillai's trace.

	* capscale: negative scaling works now in plot() and scores():
	estimates species  sd() from the 'comm' if 'comm' is known.

Version 1.10-4 (closed Oct 6, 2007 at Rev. 75)

	* anova.cca: failed in anova(object, by = "axis") when the fitted
	model had terms like poly(x, 2) or log(x).

	* ordiresids: new function for plot.lm like diagnostic plots for
	constrained ordination: Residuals ~ Fitted, sqrt(abs(Residuals)) ~
	Fitted, and qqmath(~ Residuals) using Lattice graphics.
       
	* fitted.cca, fitted.rda: gained agument type = "working" to get
	the fitted values and residuals used internally in calculation (to
	be used in plot.lm diagnostic plots residuals ~ fitted).
 	
Version 1.10-3 (closed Oct 2, 2007 at Rev. 62)

	* doc: added vignettes intro-vegan on ordination methods and
	diversity-vegan.

	* Trellis graphics for ordination objects with functions
	ordixyplot, ordicloud and ordisplom. These functions are still
	unsatisfactory. In particular, I haven't found a clean way of
	having biplot arrows in the graphs (how do you know the
	coordinates and the axes used?). Contributions are welcome.

	* ordispantree made dysfunctional (deprecated in 1.8-1). 
	
Version 1.10-2 (closed Sep 14, 2007 at Rev. 36)

	* vegandocs: added FAQ-vegan, and renamed the old vegan-FAQ to
	decision-vegan. Only primary sources (texi, Rnw) in the source